added search functionality

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,21 +1,21 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:9762",
-      "sslPort": 0
+      "applicationUrl": "http://localhost:59296/",
+      "sslPort": 44328
     }
   },
   "profiles": {
     "Document_Saver": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5041",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:5041",
+      "dotnetRunMessages": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
